<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="app_name">Flying PhotoBooth</string>

    <!-- Launch Activity -->
    <string name="launch__error_storage_dialog_title">Storage Unavailable</string>
    <string name="launch__error_storage_dialog_message">This application requires access to shared/external storage, such as an SD card mounted to the device.</string>

    <!-- Facebook Settings Activity -->
    <string name="facebook_settings__label">Select photo album</string>

    <!-- Camera Preferences -->
    <string name="pref__camera_key">pref__camera</string>

    <!-- Preferences -->
    <string name="pref__preference_screen_title">Preferences</string>
    <string name="pref__photo_booth_category_key">pref__photo_booth</string>
    <string name="pref__photo_booth_category_title">Photo Booth</string>
    <string name="pref__facebook_category_key">pref__facebook</string>
    <string name="pref__facebook_category_title">Facebook Sharing</string>
    <string name="pref__dropbox_category_key">pref__dropbox</string>
    <string name="pref__dropbox_category_title">Dropbox Sharing</string>
    <string name="pref__about_category_key">pref__about</string>
    <string name="pref__about_category_title">About</string>

    <!-- Arrangement Preferences -->
    <string name="pref__arrangement_key">pref__arrangement</string>
    <string name="pref__arrangement_title">Arrangement</string>
    <string name="pref__arrangement_default">Vertical</string>
    <string name="pref__arrangement_vertical">Vertical</string>
    <string name="pref__arrangement_horizontal">Horizontal</string>
    <string name="pref__arrangement_box">Box</string>
    <string name="pref__arrangement_vertical_summary">Vertical photo strip</string>
    <string name="pref__arrangement_horizontal_summary">Horizontal photo strip</string>
    <string name="pref__arrangement_box_summary">Box photo strip</string>

    <!-- Number of Photos Preference -->
    <string name="pref__number_of_photos_key">pref__number_of_photos</string>
    <string name="pref__number_of_photos_title">Number of photos</string>
    <string name="pref__number_of_photos_default">4</string>
    <string name="pref__number_of_photos_one">1</string>
    <string name="pref__number_of_photos_two">2</string>
    <string name="pref__number_of_photos_three">3</string>
    <string name="pref__number_of_photos_four">4</string>
    <string name="pref__number_of_photos_one_summary">Single photo</string>
    <string name="pref__number_of_photos_two_summary">2 photos in a photo strip</string>
    <string name="pref__number_of_photos_three_summary">3 photos in a photo strip</string>
    <string name="pref__number_of_photos_four_summary">4 photos in a photo strip</string>

    <!-- Filter Preferences -->
    <string name="pref__filter_key">pref__filter</string>
    <string name="pref__filter_title">Filter</string>
    <string name="pref__filter_default">None</string>
    <string name="pref__filter_none">None</string>
    <string name="pref__filter_bw">Black &amp; White</string>
    <string name="pref__filter_bw_mixed">Mixed Black &amp; White</string>
    <string name="pref__filter_sepia">Sepia</string>
    <string name="pref__filter_sepia_mixed">Mixed Sepia</string>
    <string name="pref__filter_line_art">Line Art</string>
    <string name="pref__filter_none_summary">None</string>
    <string name="pref__filter_bw_summary">Black &amp; White effect</string>
    <string name="pref__filter_bw_mixed_summary">Black &amp; White effect on alternate photos</string>
    <string name="pref__filter_sepia_summary">Sepia effect</string>
    <string name="pref__filter_sepia_mixed_summary">Sepia effect on alternate photos</string>
    <string name="pref__filter_line_art_summary">Line Art effect</string>

    <!-- Trigger Preferences -->
    <string name="pref__trigger_key">pref__trigger</string>
    <string name="pref__trigger_title">Trigger</string>
    <string name="pref__trigger_default">Manual</string>
    <string name="pref__trigger_manual">Manual</string>
    <string name="pref__trigger_countdown">Countdown</string>
    <string name="pref__trigger_burst">Burst</string>
    <string name="pref__trigger_manual_summary">Manual button to trigger each capture</string>
    <string name="pref__trigger_countdown_summary">Countdown 3s to trigger each capture</string>
    <string name="pref__trigger_burst_summary">Burst captures 1s apart</string>

    <!-- Rate Preferences -->
    <string name="pref__rate_key">pref__rate</string>
    <string name="pref__rate_title">What do you think?</string>
    <string name="pref__rate_summary">Your feedback is appreciated</string>

    <!-- Facebook Preferences -->
    <string name="pref__facebook_link_key">pref__facebook_link</string>
    <string name="pref__facebook_link_title_default">Link&#8230;</string>
    <string name="pref__facebook_link_title_linked">Unlink</string>
    <string name="pref__facebook_link_summary_default">Enable one-click or auto share</string>
    <string name="pref__facebook_link_summary_linked_one_click_share">One-click share to %1$s\'s album %2$s</string>
    <string name="pref__facebook_link_summary_linked_auto_share">Auto share to %1$s\'s album %2$s</string>
    <string name="pref__facebook_auto_share_key">pref__facebook_auto_share</string>
    <string name="pref__facebook_auto_share_title">Auto share</string>

    <!-- Dropbox Preferences -->
    <string name="pref__dropbox_link_key">pref__dropbox_link</string>
    <string name="pref__dropbox_link_title_default">Link&#8230;</string>
    <string name="pref__dropbox_link_title_linked">Unlink</string>
    <string name="pref__dropbox_link_summary_default">Enable one-click or auto share</string>
    <string name="pref__dropbox_link_summary_linked_one_click_share">One-click share to %1$s\'s folder at %2$s</string>
    <string name="pref__dropbox_link_summary_linked_auto_share">Auto share to %1$s\'s folder at %2$s</string>
    <string name="pref__dropbox_auto_share_key">pref__dropbox_auto_share</string>
    <string name="pref__dropbox_auto_share_title">Auto share</string>

    <!-- Capture Fragment -->
    <string name="capture__title_frame">PHOTO %1$d OF %2$d</string>
    <string name="capture__start_countdown_button_text">PRESS TO BEGIN</string>
    <string name="capture__start_manual_button_text">CAPTURE</string>
    <string name="capture__countdown_one">1</string>
    <string name="capture__countdown_two">2</string>
    <string name="capture__countdown_three">3</string>
    <string name="capture__countdown_separator">•</string>
    <string name="capture__review_instructions">Swipe screen to retake</string>
    <string name="capture__review_discarded">Discarded</string>
    <string name="capture__error_camera_dialog_title">Camera Unavailable</string>
    <string name="capture__error_camera_dialog_message_none">This application requires a camera on your device.</string>
    <string name="capture__error_camera_dialog_message_in_use">Your camera may be in use by another application.</string>
    <string name="capture__error_camera_crash">Restarting confused camera</string>

    <!-- Share Fragment -->
    <string name="share__beam_toast">Tap compatible device to send with Android Beam, long press icon for details</string>
    <string name="share__share_chooser_title">Share image using</string>
    <string name="share__error_generic">An error has occurred</string>

    <!-- Beam Details Dialog Fragment -->
    <string name="beam_details__dialog_title">Android Beam</string>
    <string name="beam_details__dialog_message">To beam a photo strip, both devices must have:\n\n1. Hardware that supports NFC\n2. Android JellyBean or above\n3. Screen on and unlocked\n4. NFC enabled\n5. Bluetooth enabled\n6. Android Beam enabled\n\nTap devices together to initiate transfer.</string>
    <string name="beam_details__dialog_button_text">Settings</string>

    <!-- Error Dialog Fragment -->
    <string name="error__dialog_button_text">Exit</string>

    <!-- Facebook -->
    <string name="facebook__app_id">208629902615310</string>
    <string name="facebook__account_name_key">facebook__account_name_key</string>
    <string name="facebook__photo_privacy_key">facebook__photo_privacy_key</string>
    <string name="facebook__album_name_key">facebook__album_name_key</string>
    <string name="facebook__album_graph_path_key">facebook__album_graph_path_key</string>
    <string name="facebook__error_link">Unable to link Facebook</string>
    <string name="facebook__error_facebook_app">Facebook app must be installed</string>
    <string name="facebook__notification_shared_title">Facebook share</string>
    <string name="facebook__notification_shared_msg_single">+1 photo to %1$s</string>
    <string name="facebook__notification_shared_msg_multi">+%1$d photos to %2$s</string>
    <string name="facebook__notification_shared_ticker">Facebook share completed</string>

    <!-- Facebook Privacy Dialog Fragment -->
    <string name="facebook_privacy__dialog_title">Select Privacy Level</string>
    <string name="facebook_privacy__photo_privacy_self">Only Me</string>
    <string name="facebook_privacy__photo_privacy_friends">Friends</string>
    <string name="facebook_privacy__photo_privacy_friends_of_friends">Friends of Friends</string>
    <string name="facebook_privacy__photo_privacy_everyone">Public</string>

    <!-- Dropbox -->
    <string name="dropbox__account_name_key">dropbox__account_name_key</string>
    <string name="dropbox__share_url_key">dropbox__share_url_key</string>
    <string name="dropbox__access_token_key_key">dropbox__access_token_key</string>
    <string name="dropbox__access_token_secret_key">dropbox__access_token_secret</string>
    <string name="dropbox__error_link">Unable to link Dropbox</string>
    <string name="dropbox__notification_shared_title">Dropbox share</string>
    <string name="dropbox__notification_shared_msg_single">+1 photo to %1$s</string>
    <string name="dropbox__notification_shared_msg_multi">+%1$d photos to %2$s</string>
    <string name="dropbox__notification_shared_ticker">Dropbox share completed</string>

    <!-- Retry Policy -->
    <string name="retry_policy__consecutive_fails">retry_policy__consecutive_fails</string>

</resources>