<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- Top bar -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/titlebar_color" >

        <TextView
            android:id="@+id/status"
            style="@style/TitleText.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:ellipsize="end"
            android:padding="12dip"
            android:singleLine="true" />

        <ImageButton
            android:id="@+id/preferences_button"
            style="@style/TitleText.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/selector_titlebar_button"
            android:padding="12dip"
            android:src="@drawable/ic_menu_preferences" />

        <ImageButton
            android:id="@+id/switch_button"
            style="@style/TitleText.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/preferences_button"
            android:background="@drawable/selector_titlebar_button"
            android:padding="12dip"
            android:src="@drawable/ic_menu_rotate"
            android:visibility="gone" />

        <TextView
            android:id="@+id/title"
            style="@style/TitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/status"
            android:ellipsize="end"
            android:padding="12dip"
            android:singleLine="true" />
    </RelativeLayout>

    <!-- Main content -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        android:orientation="vertical"
        android:padding="12dip" >

        <!-- Countdown timer -->

        <LinearLayout
            android:id="@+id/countdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="6dip"
            android:orientation="horizontal"
            android:visibility="invisible" >

            <TextView
                android:id="@+id/countdown_three"
                style="@style/CountdownText"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/capture__countdown_three" />

            <TextView
                style="@style/CountdownText"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/capture__countdown_separator" />

            <TextView
                android:id="@+id/countdown_two"
                style="@style/CountdownText"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/capture__countdown_two" />

            <TextView
                style="@style/CountdownText"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/capture__countdown_separator" />

            <TextView
                android:id="@+id/countdown_one"
                style="@style/CountdownText"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/capture__countdown_one" />
        </LinearLayout>

        <!-- Start button -->

        <Button
            android:id="@+id/start_button"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignTop="@id/countdown"
            android:layout_margin="6dip"
            android:background="@drawable/selector_button"
            android:text="@string/capture__start_button_text" />

        <!-- Camera preview -->

        <com.groundupworks.flyingphotobooth.views.CenteredPreview
            android:id="@+id/preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/countdown"
            android:layout_alignParentTop="true"
            android:background="@color/background_color" />
    </RelativeLayout>

</LinearLayout>